--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,17 @@
 {
-    "name": "moay/paypal-ipn-listener",
-    "description" : "PayPal IPN listener for PHP >=5.3.0",
-    "license": "MIT",
+    "name": "mike182uk/paypal-ipn-listener",
+    "description": "A composer compatible PHP >=5.3.0 PayPal IPN Listener.",
+    "keywords": ["paypal","ipn","listener"],
     "authors": [
         {
-            "name": "Michael David Barrett",
+            "name": "Mike Barrett",
             "email": "mike182uk@gmail.com"
         }
     ],
-    "require" : {
+    "require": {
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {
-            "PayPal": "src/"
-        }
+        "psr-0": {"PayPal": "src/"}
     }
 }
